# Dance_App

./: .gitignore  .gitignore.save  README.md  bpm.py  ideas.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  streamli.py  video_playback.py
backend/: app.py
dance-app/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json
dance-app/backend/: app.py  package-lock.json  package.json
dance-app/src/app/: global.d.ts  globals.css  page.tsx
